<resources>
    <string name="app_name">医废处理</string>

    <string name="home">首页</string>
    <string name="me">我的</string>
    <!-- 会员登录与注册界面-->
    <string name="login_name_hint">请输入你的账号</string>
    <string name="login_pwd_hint">请输入你的密码</string>
    <string name="login_error_hint">账号或密码错误，请重新输入</string>
    <string name="login_btn_text">登录</string>
    <string name="login_pwd_null">密码或账号不能为空!</string>

    <!--医废收集-->

    <string name="home_page">首页</string>
    <string name="zhonglei">种类：</string>
    <string name="gongsi">公司：</string>
    <string name="chepai">车牌：</string>
    <string name="zhongliang">重量：</string>
    <string name="collect_title">医废收集</string>
    <string name="quanxuan">全选</string>
    <string name="hint_zhongliang">请输入重量（单位KG）</string>
    <string name="hint_feiwumingcheng">请输入废物名称</string>

    <string name="mingcheng">名称:</string>

    <string name="ruiku">入库</string>
    <string name="chuku">出库</string>

    <!--修改密码-->
    <string name="old_pwd_hint">请输入旧密码</string>
    <string name="new_pwd_hint">请输入新密码</string>
    <string name="new1_pwd_hint">确认新密码</string>

    <string name="old_pwd">旧&#8194;密&#8194;码:</string>
    <string name="new_pwd">新&#8194;密&#8194;码:</string>
    <string name="new1_pwd">确认密码:</string>
    <string name="submit">提交</string>


    <!--设置-->
    <string name="kefu">联系客服</string>
    <string name="sclx">路线设置</string>
    <string name="tel">028-87393250</string>
    <string name="login_out">退出登录</string>
    <string name="xingming">姓名</string>
    <string name="change_pwd">修改密码</string>
    <string name="print_set">打印机设置</string>

    <!--打印机设置-->
    <string name="print_width">纸张宽度:</string>
    <string name="print_height">纸张高度:</string>
    <string name="print_gray">打印灰度:</string>
    <string name="print_width_hint">请输入纸张宽度(mm)</string>
    <string name="print_height_hint">请输入纸张高度(mm)</string>
    <string name="revise_paper">校正纸张</string>
    <string name="save">保存</string>
    <string name="print_error">打印机故障</string>

    <string name="driver">司机：</string>
    <string name="collect_people">收集人：</string>
    <string name="fw_leixing">废物类型：</string>
    <string name="fw_biaoshi">废物标识：</string>
    <string name="yunshu_cars">运输车辆：</string>
    <string name="shouji_time">收集时间：</string>
    <string name="rukui_time">入库时间：</string>

    <string name="yfsj">收集</string>
    <string name="yfys">运输中</string>
    <string name="yfrk">库存</string>
    <string name="yfck">待销毁</string>
    <string name="yfxf">已销毁</string>
    <string name="yfcx">查询</string>
    <string name="xiaohui">销毁</string>


    <string name="ys_hint">扫码进行入库操作</string>
    <string name="kc_hint">扫码进行出库操作</string>
    <string name="dxh_hint">扫码进行销毁操作</string>
</resources>
