<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:orientation="vertical">

        <include
            android:id="@+id/il_title"
            layout="@layout/base_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_high"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edit"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:text="@string/old_pwd"
                android:textSize="14sp"
                android:layout_marginStart="14.5dp"/>

            <EditText
                android:id="@+id/old_pwd_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="14dp"
                android:background="@null"
                android:hint="@string/old_pwd_hint"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_text_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_high"
            android:background="@drawable/bg_edit"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:text="@string/new_pwd"
                android:textSize="14sp"
                android:layout_marginStart="14.5dp"/>

            <EditText
                android:id="@+id/new_pwd_edt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/new_pwd_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_text_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_high"
            android:background="@drawable/bg_edit"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:text="@string/new1_pwd"
                android:textSize="14sp"
                android:layout_marginStart="14.5dp"/>

            <EditText
                android:id="@+id/new1_pwd_edt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"

                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/new1_pwd_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_text_line" />
        <LinearLayout
            android:id="@+id/error_ll"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginTop="26dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="invisible">

            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_marginStart="12.5dp"
                android:background="@mipmap/login_hint"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginStart="5.5dp"
                android:text="@string/login_error_hint"
                android:textColor="@color/color_hint_text"
                android:textSize="12sp" />

        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_high"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/login_btn"
            android:text="@string/submit"
            android:textColor="@color/color_white"
            android:textSize="18sp" />

    </LinearLayout>

</layout>