<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:orientation="vertical">

        <include
            android:id="@+id/il_title"
            layout="@layout/base_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/bg_edit"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="18dp"
                android:layout_marginStart="14.5dp"
                android:src="@mipmap/login_people" />

            <EditText
                android:id="@+id/login_name_edt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="14dp"
                android:background="@null"
                android:hint="@string/login_name_hint"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_text_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/bg_edit"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="18dp"
                android:layout_marginStart="14.5dp"
                android:src="@mipmap/login_lock" />

            <EditText
                android:id="@+id/login_pwd_edt"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"

                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_pwd_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/error_ll"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_marginTop="26dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="invisible">

            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_marginStart="12.5dp"
                android:background="@mipmap/login_hint"
                android:scaleType="centerCrop" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginStart="5.5dp"
                android:text="@string/login_error_hint"
                android:textColor="@color/color_hint_text"
                android:textSize="12sp" />

        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_high"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/login_btn"
            android:text="@string/login_btn_text"
            android:textColor="@color/color_white"
            android:textSize="18sp" />

    </LinearLayout>

</layout>

