<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color_background">

        <include
            android:id="@+id/il_title"
            layout="@layout/base_title" />
        <LinearLayout
            android:layout_width="match_parent"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_high"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edit"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:text="@string/gongsi"
                    android:textSize="14sp"
                    android:layout_marginStart="14.5dp"/>

                <Spinner
                    android:id="@+id/sp_ks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/keshi"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_text_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_high"
                android:background="@drawable/bg_edit"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:text="@string/zhonglei"
                    android:textSize="14sp"
                    android:layout_marginStart="14.5dp"/>

                <LinearLayout
                    android:id="@+id/sp_zl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textSize="14sp" >
                    <LinearLayout
                        android:id="@+id/ll_zhongnei"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">
                       <!-- <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="兔子"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="老鼠"/>
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="青蛙"/>-->
                    </LinearLayout>
                    
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_text_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_high"
                android:background="@drawable/bg_edit"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:text="@string/mingcheng"
                    android:textSize="14sp"
                    android:layout_marginStart="14.5dp"/>

                <EditText
                    android:id="@+id/et_mingcheng"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="14dp"

                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/hint_feiwumingcheng"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_text_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_high"
                android:background="@drawable/bg_edit"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:text="@string/zhongliang"
                    android:textSize="14sp"
                    android:layout_marginStart="14.5dp"/>

                <EditText
                    android:id="@+id/et_zhongliang"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="14dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:inputType="number|numberDecimal"
                    android:hint="@string/hint_zhongliang"
                    android:singleLine="true"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KG" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_text_line" />

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="250dp">
                <ImageView
                    android:id="@+id/img_photo"
                    android:layout_width="match_parent"
                    android:background="@drawable/bg_edit"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:id="@+id/img_btn_del"
                    android:visibility="invisible"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:src="@mipmap/cha"/>
                <ImageView
                    android:id="@+id/img_btn_photo"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/jia"/>
            </RelativeLayout>

            <Button
                android:id="@+id/up_data_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_high"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/login_btn"
                android:text="@string/login_up_text"
                android:textColor="@color/color_white"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</layout>